[tool.poetry]
name = "tcp-controllable-light"
version = "0.1.0"
description = ""
authors = ["sbkubric <sbkubric@gmail.com>"]
readme = "README.md"
packages = [{include = "tcp_controllable_light"}]

[tool.poetry.dependencies]
python = "^3.10"
polog = "^0.0.17"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
